--- a/package.json
+++ b/package.json
@@ -1,30 +1,55 @@
 {
-  "name": "@alifd/scaffold-simple",
+  "name": "modelps_demo",
   "version": "0.1.0",
-  "description": "ModelPS demonstration.",
+  "private": true,
   "dependencies": {
-    "antd": "^4.15.6",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "antd": "^4.16.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.1.2"
   },
   "devDependencies": {
-    "@iceworks/spec": "^1.0.0",
-    "eslint": "^6.8.0",
-    "ice.js": "^1.0.0",
-    "stylelint": "^13.2.0"
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^12.20.13",
+    "@types/react": "^17.0.6",
+    "@types/react-dom": "^17.0.5",
+    "gh-pages": "^3.2.0",
+    "typescript": "^4.2.4"
   },
-  "scripts": {
-    "start": "icejs start",
-    "build": "icejs build",
-    "lint": "npm run eslint && npm run stylelint",
-    "eslint": "eslint --cache --ext .js,.jsx,.ts,.tsx ./",
-    "eslint:fix": "npm run eslint -- --fix",
-    "stylelint": "stylelint \"**/*.{css,scss,less}\""
-  },
+  "description": "ModelPS demonstration.",
+  "homepage": "https://cap-ntu.github.io/modelps_demo/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/alibaba-fusion/materials/tree/master/scaffolds/scaffold-simple"
+    "url": "https://github.com/cap-ntu/modelps_demo"
   },
-  "private": true,
-  "originTemplate": "@alifd/scaffold-simple"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
